Fixed broken CS on Index and aligned sheet music to center -- Chloie and Felipe

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ body {
   grid-template: 75px 100px 250px 250px 1fr/ repeat(12, 1fr);
   grid-gap: 5px;
 }
+
 nav {
   grid-column: 1 / last;
   grid-row: 1;
@@ -32,6 +33,11 @@ header {
 section img {
   width: 500px;
   height: auto;
+}
+
+#musicSheetWrapper{
+  grid-column: 5 / 9;
+  grid-row: 3;
 }
 
 #item_0 {
